attempt to fix rounding on mobile v2

--- a/styles.css
+++ b/styles.css
@@ -306,8 +306,8 @@ section {
     /* width: 90%; */
     width: auto;
     height: auto;
-    max-width: 90%;
-    max-height: 95%;
+    max-width: 100%;
+    max-height: 380px;
     object-fit: contain; /* object-fit: + width: fits image within the div (but does not allow rounded image borders so we use auto width/height with max instead) */
     padding: 10px;
     max-width: 100%;
